--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "start": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "start:prod": "NODE_ENV=production node build/server.js"
+    "start:prod": "NODE_ENV=production node build/server.js",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "express": "^4.16.4",
@@ -18,6 +20,12 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "razzle-plugin-scss": "^2.4.1"
+    "razzle-plugin-scss": "^2.4.1",
+    "@storybook/react": "^4.1.11",
+    "@storybook/addon-actions": "^4.1.11",
+    "@storybook/addon-links": "^4.1.11",
+    "@storybook/addons": "^4.1.11",
+    "@babel/core": "^7.2.2",
+    "babel-loader": "^8.0.5"
   }
 }
