--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-knobs": "^6.1.14",
     "@storybook/addons": "^6.1.11",
     "@storybook/react": "^6.1.11",
     "babel-eslint": "^9.0.0",
