--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "react-app",
+  "extends": ["react-app", "plugin:react-hooks/recommended"],
   "rules": {
     "react/require-default-props": 2,
     "react/prop-types": 2,
